[metadata]
name = request
version = 2018.11.20
url = https://github.com/looking-for-a-job/request.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = request http

[options]
install_requires = 
	get
	post
	setuptools
packages = 
	request
